--- a/portfolio_morio_coding/about/css/style.css
+++ b/portfolio_morio_coding/about/css/style.css
@@ -1,6 +1,26 @@
 @charset "utf-8";
+.fade-Trigger {
+  animation-name: zoomInAnime;
+  animation-duration: 0.8s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+@keyframes zoomInAnime {
+  from {
+    transform: scale(0.6);
+    opacity: 0;
+  }
+
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
 a.btn_sp {
   display: none;
+}
+.about {
+  padding: 0 40px;
 }
 @media screen and (max-width: 900px) {
   /* jugyou */
@@ -11,7 +31,7 @@ a.btn_sp {
     display: block;
     position: absolute;
     top: 50px;
-    right: 25px;
+    right: 40px;
     height: 23px;
     cursor: pointer;
     z-index: 2;
@@ -107,6 +127,7 @@ a.btn_sp {
 }
 .fv_wrap {
   position: relative;
+  top: 100px;
 }
 .fv_text {
   width: 49.2%;
@@ -126,11 +147,10 @@ a.btn_sp {
   margin-bottom: 6px;
   font-weight: bold;
   align-items: flex-end;
-  padding-top: 100px;
+  padding-top: 150px;
   padding-bottom: 50px;
   max-width: 1000px;
   margin: 0 auto;
-  padding-left: 20px;
 }
 .name_large {
   font-size: 30px;
@@ -147,13 +167,17 @@ a.btn_sp {
 .text_inner {
   max-width: 1000px;
   margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 @media screen and (max-width: 767px) {
+  .fv_wrap {
+    margin-top: 0px;
+  }
   .text_box {
     width: 8px;
     height: 23px;
+  }
+  .text_top {
+    padding-top: 150px;
   }
   .name_large {
     font-size: 20px;
@@ -170,15 +194,14 @@ a.btn_sp {
     text-align: center;
     text-decoration: none;
     width: 50px;
-    margin: 0 0 0 auto;
-    padding: 0.5rem 2rem;
+    padding: 10px 20px;
     font-weight: bold;
     background: #232323;
     color: #f2eee7;
     transition: 0.3s;
-    margin-top: 25px;
+    margin: 60px auto 0px;
     border: #232323 solid 2px;
-    margin: 0 auto;
+    font-size: 12px;
   }
   a.btn_sp:hover {
     color: #232323;
