--- a/portfolio_morio_coding/css/style.css
+++ b/portfolio_morio_coding/css/style.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-.roading {
+.loading {
   position: absolute;
   top: 0;
   left: 0;
@@ -10,33 +10,125 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 99;
 }
-.roading::before,
-.roading::after {
+.loading::before,
+.loading::after {
   content: "";
   position: absolute;
-  top: 50px;
-  width: 42%;
-  height: 10px;
-  background-color: #f2eee7;
-  transition: 3s;
+  top: 47%;
+  width: 42.3%;
+  height: 0.3vw;
+  background-color: #232323;
+  transition: 1.5s ease-in-out; /* 緩急をつける */
 }
-.roading::before {
-  left: 0;
+.loading::before {
   transform: translateX(-100%);
 }
-.roading::after {
-  right: 0;
-  transform: matrix(100%);
+.loading::after {
+  transform: translateX(100%);
+}
+.loading.is-active::before {
+  left: 0;
+  transform: translateX(0%);
 }
 
-.works_pc,
-.skill_pc,
-.about_pc {
+.loading.is-active::after {
+  right: 0;
+  transform: translateX(0%);
+}
+.fv_top {
+  display: flex;
+  position: absolute;
+  top: 38%;
+  align-items: flex-end;
+  width: 20%;
+  left: 20%;
+  height: 60px;
+}
+.fv_bottom {
+  display: flex;
+  position: absolute;
+  top: 48%;
+  align-items: flex-end;
+  width: 20%;
+  left: 60%;
+}
+
+.fv_letter {
+  opacity: 0;
+  transition: 1.5s;
+}
+.fv_letter.is-show {
+  opacity: 1;
+}
+.loading_m {
+  position: absolute;
+  width: 8.1%;
+  bottom: 52.7%;
+}
+
+.left {
+  left: 50%;
+  animation-name: mfadeleft;
+  animation-duration: 1.5s;
+  animation-fill-mode: forwards;
+}
+@keyframes mfadeleft {
+  from {
+    opacity: 0;
+    transform: translateX(-200%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(-98%);
+  }
+}
+.right {
+  left: 50%;
+  animation-name: mfaderight;
+  animation-duration: 1.5s;
+  animation-fill-mode: forwards;
+}
+@keyframes mfaderight {
+  from {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(-2%);
+  }
+}
+/* .fv_3 {
+  width: 52%;
+} */
+.fv_2,
+.fv_3,
+.fv_4,
+.fv_5,
+.fv_7,
+.fv_8,
+.fv_10 {
+  padding-left: 5px;
+}
+.fv_3 {
+  max-width: 25%;
+}
+.fv_8 {
+  max-width: 24%;
+}
+/* フェードイン */
+/* 上から（スクロール） */
+.fade-down {
+  opacity: 0;
+}
+.scroll-in {
   animation-name: fadeDownAnime;
   animation-duration: 0.8s;
   animation-fill-mode: forwards;
-  opacity: 0;
 }
 
 @keyframes fadeDownAnime {
@@ -49,6 +141,63 @@
     opacity: 1;
     transform: translateY(0);
   }
+}
+/* 左から（スクロール） */
+.fadeLeft {
+  opacity: 0;
+}
+.scroll-left {
+  animation-name: fadeLeftAnime;
+  animation-duration: 0.8s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+@keyframes fadeLeftAnime {
+  from {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+/* 拡大（スクロール） */
+.fadeTrigger {
+  opacity: 0;
+}
+.fade-in {
+  animation-name: zoomInAnime;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes zoomInAnime {
+  from {
+    transform: scale(0.6);
+    opacity: 0;
+  }
+
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+/* 左から（スクロールなし） */
+.fade_left {
+  animation-name: fadeLeftAnime;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+/* 拡大（スクロールなし） */
+.fade-Trigger {
+  animation-name: zoomInAnime;
+  animation-duration: 0.8s;
+  animation-fill-mode: forwards;
+  opacity: 0;
 }
 
 /* スクロールをしたら出現する要素にはじめに透過0を指定　*/
@@ -71,7 +220,7 @@
   margin: 0 auto;
 }
 .scroll::before {
-  animation: scroll 3.5s infinite;
+  animation: scroll 3s infinite;
   border: solid #000;
   border-width: 0 0 2px 2px;
   content: "";
@@ -83,6 +232,7 @@
   transform: rotate(-45deg);
   width: 20px;
   height: 20px;
+  top: 80%;
 }
 @keyframes scroll {
   0% {
@@ -114,7 +264,8 @@
   text-orientation: upright;
   font-size: 18px;
   line-height: 1.95;
-  font-family: Noto Sans CJK JP;
+  font-family: serif;
+  font-weight: bold;
 }
 
 /* works */
@@ -130,46 +281,30 @@
   flex-wrap: wrap;
 }
 .pc_works h2 {
-  max-width: 76px;
-  width: 7.6%;
+  width: 92px;
   position: absolute;
   left: calc(50% + 520px);
+
   background-color: transparent;
+  padding-right: 20px;
 }
-.works_slider {
+.works_sp_wrap {
   display: none;
 }
 .works_sp {
   display: none;
 }
 
-@media screen and (max-width: 1230px) {
+@media screen and (max-width: 1200px) {
   .works_pc h2 {
     left: auto;
     right: 0%;
   }
   .home-works_wrap {
-    width: calc(100% - 76px);
+    width: calc(100% - 51px);
   }
 }
-@media screen and (max-width: 1040px) {
-  .works_pc h2 {
-    left: auto;
-    right: 0%;
-  }
-  .home-works_wrap {
-    width: calc(93% - 76px);
-  }
-}
-@media screen and (max-width: 845px) {
-  .works_pc h2 {
-    left: auto;
-    right: 0%;
-  }
-  .home-works_wrap {
-    width: calc(100% - 76px);
-  }
-}
+
 .home-works_wrap li {
   width: 45%;
   margin-bottom: 100px;
@@ -179,9 +314,9 @@ a.btn_sp {
   display: block;
   text-align: center;
   text-decoration: none;
-  width: 50px;
+  width: 130px;
   margin: 0 0 100px auto;
-  padding: 1rem 4rem;
+  padding: 1rem;
   font-weight: bold;
   background: #232323;
   color: #f2eee7;
@@ -248,16 +383,18 @@ a.btn_sp {
   line-height: 2.25;
   text-align-last: right;
 }
-
 .skill_img_right {
   width: 20%;
   float: right;
   margin-right: 40px;
 }
-.skill_img_center {
+.skill_img_center_pc {
   width: 40%;
   margin: 0 auto;
   margin-top: 150px;
+}
+.skill_img_center_sp {
+  display: none;
 }
 .skill_img_left {
   width: 19%;
@@ -310,7 +447,6 @@ a.btn_sp {
     width: calc(93% - 76px);
   }
 }
-
 .about_wrap {
   display: flex;
   justify-content: center;
@@ -333,9 +469,9 @@ a.btn_about {
   display: block;
   text-align: center;
   text-decoration: none;
-  width: 50px;
+  width: 130px;
   margin: 0 0 0 auto;
-  padding: 1rem 4rem;
+  padding: 1rem;
   font-weight: bold;
   background: #232323;
   color: #f2eee7;
@@ -367,7 +503,6 @@ a.btn_about:hover {
   max-width: 350px;
   margin-right: 7.5%;
 }
-
 .contact_wrap p {
   font-size: 16px;
   line-height: 1.56;
@@ -401,7 +536,6 @@ a.btn_about:hover {
   color: #232323;
   background-color: #fffe3e;
 }
-
 .btn_page {
   display: block;
   text-align: center;
@@ -421,6 +555,8 @@ button.btn_page:hover {
   color: #232323;
   background: #fffe3e;
 }
+
+/* contact */
 .ttl {
   display: flex;
   align-items: center;
@@ -455,7 +591,6 @@ button.btn_page:hover {
   padding-left: 50px;
   padding-right: 50px;
 }
-
 .ttl_wrap p {
   border-left: 3px solid #232323;
   font-size: 20px;
@@ -463,47 +598,51 @@ button.btn_page:hover {
 }
 .contact_text {
   margin-bottom: 50px;
-}
-.contact_text p {
-  font-size: 18px;
-  line-height: 1.8;
+  font-size: 20px;
 }
 .contact_form {
   display: block;
 }
 .contact_page {
-  width: 1000px;
+  width: 100%;
   margin: 0 auto;
   padding-bottom: 150px;
 }
 .contact_page input,
 .contact_page textarea {
   display: block;
-  width: 100%;
+  width: 800px;
   border: none;
 }
 .contact_page label {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
 }
 .contact_page input {
-  height: 80px;
   margin-top: 10px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  padding: 15px;
+  width: 100%;
+  box-sizing: border-box;
 }
 .contact_page textarea {
   height: 400px;
   margin-bottom: 80px;
   margin-top: 10px;
   box-sizing: border-box;
+  width: 100%;
 }
 .contact_page button {
   text-align: center;
 }
+.form {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 0 40px;
+}
 
 @media screen and (max-width: 900px) {
-  /* jugyou */
   .pc_nav {
     display: none;
   }
@@ -514,6 +653,7 @@ button.btn_page:hover {
     right: 25px;
     height: 23px;
     cursor: pointer;
+    padding-right: 20px;
     z-index: 2;
     /* 重なり順を指定 */
   }
@@ -606,6 +746,40 @@ button.btn_page:hover {
   }
 }
 @media screen and (max-width: 767px) {
+  .fv_top,
+  .fv_bottom {
+    display: block;
+    width: 7%;
+    bottom: 53%;
+  }
+  .fv_top {
+    top: unset;
+    left: 62%;
+    height: unset;
+  }
+  .fv_bottom {
+    left: 31%;
+  }
+  .fv_3,
+  .fv_8 {
+    width: 7%;
+  }
+  .fv_5 {
+    width: 30px;
+  }
+  .fv_2,
+  .fv_3,
+  .fv_4,
+  .fv_5,
+  .fv_7,
+  .fv_8,
+  .fv_10 {
+    padding-left: unset;
+  }
+
+  .scroll img {
+    width: 70px;
+  }
   .concept {
     margin-bottom: 137px;
   }
@@ -613,26 +787,42 @@ button.btn_page:hover {
   .pc_works {
     display: none;
   }
-  .works_slider {
+
+  .works_sp_wrap {
     display: block;
-    text-align: center;
   }
-  .works_slider img {
-    width: 80%;
+  .works_sp_wrap p {
+    font-size: 3vw;
+    margin-bottom: 100px;
+  }
+  .works_mock {
+    max-width: 80%;
+    margin: auto;
+  }
+  .works_mock img {
     margin: 0 auto;
-    padding-bottom: 50px;
+  }
+  .works_logo {
+    max-width: 25%;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+  .works_block {
+    padding-left: 30px;
   }
   .works_sp {
     display: block;
     margin: 0 auto;
-    width: 178px;
-    margin-bottom: 50px;
+    max-width: 45%;
+    margin-bottom: 20px;
   }
   a.btn_sp {
     display: block;
-    padding: 0.5rem 2rem;
+    padding: 5px 0px;
     margin-right: 20px;
     margin-top: 100px;
+    width: 100px;
+    font-size: 15px;
   }
   a.btn_pc {
     display: none;
@@ -641,6 +831,10 @@ button.btn_page:hover {
   .concept p {
     font-size: 14px;
     line-height: 1.78;
+  }
+  /* skill */
+  .skill {
+    padding: 0;
   }
   .skill_wrap {
     padding-left: 30px;
@@ -666,34 +860,34 @@ button.btn_page:hover {
     margin-bottom: 0px;
     margin-top: 150px;
   }
-  .skill_img_center {
+  .skill_img_center_sp {
+    display: block;
     width: 200px;
     height: 242px;
     margin-top: 110px;
+    margin: 0 auto;
+    padding-top: inherit;
+  }
+  .skill_img_center_pc {
+    display: none;
   }
   .skill_img_right {
     width: 100px;
     height: 100px;
     float: right;
-    margin-right: 10px;
+    margin-right: 40px;
   }
   .skill_img_left {
     width: 100px;
-    margin-top: 40px;
-    margin-left: 10px;
+    margin-top: 100px;
+    margin-left: 40px;
     margin-bottom: 30px;
   }
-  /* .skill_head p {
-    display: none;
-  }
-  .skill_head_sp p {
-    display: block;
-    text-align: left;
-  } */
-  .slider_wrap {
-    display: block;
-  }
+
   /* about */
+  .about {
+    padding: 0;
+  }
   .about_sp {
     display: block;
     margin: 0 auto;
@@ -705,7 +899,7 @@ button.btn_page:hover {
     display: none;
   }
   .about_img {
-    width: 200px;
+    width: 265px;
     display: block;
     margin: 0 auto;
   }
@@ -723,17 +917,18 @@ button.btn_page:hover {
     margin: 0 auto;
   }
   .about_wrap p {
-    margin: 20px 0 20px 0;
     text-align: center;
     font-size: 14px;
     line-height: 2.07;
     padding-top: 20px;
   }
   a.btn_about {
-    padding: 0.5rem 2rem;
+    padding: 5px 0px;
     margin-right: 20px;
     margin-top: 30px;
     margin-bottom: 200px;
+    width: 100px;
+    font-size: 15px;
   }
   a.btn_pc {
     padding: 0.5rem 2rem;
@@ -747,11 +942,14 @@ button.btn_page:hover {
   }
   .btn_page {
     margin-bottom: 100px;
+    padding: 10px 0;
+    width: 100px;
   }
 
   .contact {
     display: block;
     height: 500px;
+    padding: 0 20px;
   }
   .contact_page {
     margin-bottom: 100px;
@@ -780,51 +978,34 @@ button.btn_page:hover {
     border-width: 2px;
     height: 60px;
   }
-  .ttl_wrap {
-    width: 375px;
-    margin-top: 100px;
-  }
-  .ttl_wrap img {
-    width: 145px;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-  .work_pc {
-    width: 145px;
-  }
-  .ttl_wrap p {
-    font-size: 15px;
-    padding: 18px 0 18px 10px;
-    border-left: 2px solid #232323;
-  }
-  .contact_page input {
-    height: 50px;
-    margin-top: 10px;
-    margin-bottom: 30px;
-  }
-  .contact_page textarea {
-    height: 250px;
-    margin-bottom: 40px;
-    margin-top: 10px;
-  }
-  .form {
-    width: 335px;
-  }
-  .contact_page_wrap {
-    width: 335px;
-  }
-  .contact_text p {
-    margin: 0 auto;
-    font-size: 15px;
+  .ttl_box {
+    width: 12px;
   }
   .contact_text {
-    width: 375px;
-  }
-  .contact_page {
-    width: 375px;
-    margin: 0 auto;
+    font-size: 15px;
   }
   .ttl_wrap {
-    margin-bottom: 50px;
+    margin-top: 120px;
+    margin-bottom: 40px;
+  }
+  .ttl_wrap p {
+    display: none;
+  }
+  .ttl_wrap img {
+    width: 180px;
+    padding-left: 20px;
+  }
+  .contact_text p {
+    margin-bottom: 40px;
+  }
+  .contact_page label {
+    font-size: 15px;
+  }
+  .contact_page input {
+    padding: 10px;
+    margin-bottom: 20px;
+  }
+  .contact_page textarea {
+    height: 150px;
   }
 }
